tests/disallow-latest-tag/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: tagged-images
  namespace: apps
spec:
  containers:
    - name: app
      image: registry.example/team/app:v1.2.3
  initContainers:
    - name: setup
      image: busybox:1.36.1
  ephemeralContainers:
    - name: debug
      image: registry.example/tools/debug:v2
---
apiVersion: v1
kind: Pod
metadata:
  name: tag-and-digest
  namespace: apps
spec:
  containers:
    - name: app
      image: registry.example/team/app:v1.2.3@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
---
apiVersion: v1
kind: Pod
metadata:
  name: tag-and-sha512-digest
  namespace: apps
spec:
  containers:
    - name: app
      image: "registry.example/team/app:v1.2.3@sha512:\
        bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb\
        bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb"
---
apiVersion: v1
kind: Pod
metadata:
  name: tagless-image
  namespace: apps
spec:
  containers:
    - name: app
      image: registry.example/team/app
---
apiVersion: v1
kind: Pod
metadata:
  name: digest-only-image
  namespace: apps
spec:
  containers:
    - name: app
      image: registry.example/team/app@sha256:cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
---
apiVersion: v1
kind: Pod
metadata:
  name: sha512-digest-only-image
  namespace: apps
spec:
  containers:
    - name: app
      image: "registry.example/team/app@sha512:\
        eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee\
        eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"
---
apiVersion: v1
kind: Pod
metadata:
  name: registry-port-tagless-image
  namespace: apps
spec:
  containers:
    - name: app
      image: registry.example:5000/team/app
---
apiVersion: v1
kind: Pod
metadata:
  name: tagless-init-image
  namespace: apps
spec:
  containers:
    - name: app
      image: registry.example/team/app:v1
  initContainers:
    - name: setup
      image: registry.example/team/setup
---
apiVersion: v1
kind: Pod
metadata:
  name: tagless-ephemeral-image
  namespace: apps
spec:
  containers:
    - name: app
      image: registry.example/team/app:v1
  ephemeralContainers:
    - name: debug
      image: registry.example/tools/debug
---
apiVersion: v1
kind: Pod
metadata:
  name: latest-image
  namespace: apps
spec:
  containers:
    - name: app
      image: registry.example/team/app:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: latest-and-digest
  namespace: apps
spec:
  containers:
    - name: app
      image: registry.example/team/app:latest@sha256:dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
---
apiVersion: v1
kind: Pod
metadata:
  name: latest-init-image
  namespace: apps
spec:
  containers:
    - name: app
      image: registry.example/team/app:v1
  initContainers:
    - name: setup
      image: busybox:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: latest-ephemeral-image
  namespace: apps
spec:
  containers:
    - name: app
      image: registry.example/team/app:v1
  ephemeralContainers:
    - name: debug
      image: registry.example/tools/debug:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: non-pod
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: non-pod
  template:
    metadata:
      labels:
        app: non-pod
    spec:
      containers:
        - name: app
          image: registry.example/team/app:latest
